# Harmony

./: .env.example  Dockerfile  Procfile  README.md  adapters.py  app.py  docker-compose.yml  models.py  package.json  pyproject.toml  requirements.txt
frontend/: LOVABLE_DEPLOY.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Account.tsx  Channels.tsx  Conciliation.tsx  Dashboard.tsx  Orders.tsx  Settings.tsx  Sync.tsx
instance/: salesharmony.db
tests/: test_basic.py
