[project]
name = "salesharmony"
version = "0.1.0"
description = "Plataforma de conciliación de ventas para marketplaces en LATAM"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SalesHarmony Team" }]
license = { text = "MIT" }
dependencies = [
  "Flask>=3.0.0,<4.0.0",
  "Flask-Cors>=4.0.0,<5.0.0",
  "Flask-SQLAlchemy>=3.1.1,<4.0.0",
  "Flask-Migrate>=4.0.7,<5.0.0",
  "PyJWT>=2.8.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "gunicorn>=22.0.0,<23.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "httpx>=0.27.0,<0.28.0",
  "ruff>=0.5.0,<0.6.0",
]

[tool.setuptools]
packages = ["."]

